assets/pages/new-contributions-landing/contributionsLanding.scss
/* ... */
.countryGroups__item:first-child > a {
  &:before {
    content: none;
  }
}

.countryGroups__item > a {
  color: inherit;
  display: flex;
  padding: 0 15px;
  line-height: 40px;
  text-decoration: none;
  justify-content: space-between;
  position: relative;


  &:before {
    content: '';
    border-top: 1px solid gu-colour(brightness-86);
    display: block;
    position: absolute;
    top: 0;
    left: 15px;
    right: 0;
  }
}

.countryGroups__item > a:hover,
.countryGroups__item > a:focus {
  background: gu-colour(brightness-97);
  font-weight: bold;
}


/*= FOOTER */

footer[role="contentinfo"] {
  padding: 0 ($gu-h-spacing / 2);
  background: gu-colour(brightness-20);
  color: gu-colour(brightness-60);
  font-size: 12px;
  display: flex;

  @include mq($from: tablet) {
    padding: 0 0 ($gu-v-spacing * 2);
    width: auto;
  }

  @include mq($from: leftCol) {
    padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
    width: 940px;
  }
}

footer[role="contentinfo"] a {
  color: gu-colour(brightness-100);
}

.component-footer__content {
  padding-top: $gu-v-spacing;
}


/*= CONTENT */
.gu-content__content {
  background: gu-colour(brightness-100);
  padding: 0 10px;
  overflow: hidden;
  flex-grow: 1;

  @include mq($from: tablet) {
    border-color: gu-colour(brightness-86);
    border-style: none solid;
    border-width: 0 1px;
    width: 380px;
    margin-left: $content-left-margin-tablet
  }

  @include mq($from: leftCol) {
    width: 380px;
    margin-left: $content-left-margin-leftCol
  }

}

// Alternative form layout 
.gu-content--contribution-form-two {

  .gu-content__main {
    display: block; // this is to remove the display flex set earlier
    background-color: gu-colour(sport-faded);
  }

  .gu-content__content {
    margin: 0 auto;
    width: 100%;
    max-width: 1015px;
    border: none;
    padding: 0;
    background-color: transparent;

    @include mq($from: tablet) {
      margin-left: $content-left-margin-tablet
    }

    @include mq($from: leftCol) {
      margin-left: $content-left-margin-leftCol
    }
  }

  .gu-content__content--flex {
    display: flex;
    justify-content: space-between;
    flex-direction: row-reverse;
  }

  .gu-content__form {
    margin: auto;
    width: auto;
    padding: 0 10px;
    border-color: gu-colour(brightness-86);
    border-style: none solid;
    border-width: 0 1px;
    border-bottom: 1px solid gu-colour(brightness-86);
    background-color: gu-colour(brightness-100);

    @include mq($from: tablet) {
      width: 40%;      
    }
  }

  .form__radio-group--contribution-type:after {
    background-image: none;
    height: 0;
  }

  .form__radio-group-list {
    padding: 0px;
  }

  .form__radio-group-list--border {
    border-bottom: 1px solid gu-colour(brightness-86);

    li label {
      font-family: $gu-titlepiece;
      font-size: 22px;
    }
  }

  .form--contribution .component-terms-privacy {
    margin: 10px 0 10px;
  }

  .gu-content__form {
    @include mq($from: tablet) {
      margin: 30px 10px;
    }
  }

  .gu-content__blurb {
    display: none;
    max-width: 380px;
    border-top: 10px solid gu-colour(highlight-main);
    margin-left: auto;
    
    h1 {
      border-bottom: none;
      padding-bottom: 10px;
      font-size: 44px;
      line-height: 46px;
      font-family: $gu-titlepiece;
    }

    p {
      font-size: 18px;
      line-height: 22px;
    }

    @include mq($from: tablet) {
      display: block;
      margin: 30px 120px 30px 10px;
    }
  }
  
}

/*= TYPOGRAPHY */
body {
  color: gu-colour(brightness-7);
  font: normal 16px/1.5 $gu-text-egyptian-web;
}

input,
select,
textarea,
button {
  font: inherit;
}

.blurb {
  display: none;

  @include mq($from: tablet) {
    display: block;
    font: 100 17px/1.25 $gu-text-egyptian-web;
    margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
  }
}

footer[role="contentinfo"] {
  font-family: $gu-text-sans-web;

  @include mq($from: tablet) {
    padding: 0 calc(50% - 350px) ($gu-v-spacing * 2);
    width: 700px;
  }

  @include mq($from: wide) {
    padding: 0 calc(50% - 620px) ($gu-v-spacing * 2);
    width: 1240px;
  }

}


/*= CONTENT */
.content {
  background: gu-colour(brightness-100);
  padding: 0 10px;
}

.form--contribution {
  display: flex;
  flex-direction: column;
}

.form__field {
  align-items: stretch;
  display: flex;
  flex-direction: column;
}

.form--contribution .component-terms-privacy {
  margin-bottom: 30px;
  font-size: 12px;
  line-height: 16px;
  color: gu-colour(brightness-60);

  a {
    color: gu-colour(brightness-46);
  }

  .component-terms-privacy__change {
    padding-bottom: 4px;
  }

}

/*= TYPOGRAPHY */

form {
  font-family: $gu-text-sans-web;
}

.form__radio-group--tabs {
  font-family: $gu-headline;
  font-weight: bold;
}

/*= CONTRIBUTION FORM */
.form__radio-group {
  border: 0;
  margin: 0;
  padding: 0;
}

.form__radio-group--contribution-type {
  @include multiline-bottom-border;
}

.form__radio-group--contribution-type:after {
  margin: 0 -10px;
}

.form__legend--radio-group {
  display: none;
}

.form__radio-group-list {
  list-style: none;
  padding: 0;

  @include mq($from: tablet) {
    padding: $gu-v-spacing 0 0 0;
  }
}

.form__radio-group-input {
  display: none;
}

.form__radio-group-label {
  cursor: pointer;
}

.form__radio-group--tabs .form__radio-group-list {
  display: flex;
  margin: 0 -10px;
}

.form__radio-group--tabs .form__radio-group-item {
  border-top: 1px solid gu-colour(brightness-86);
  flex: 1;
}

.form__radio-group--tabs .form__radio-group-item + .form__radio-group-item {
  border-left: 1px solid gu-colour(brightness-86);
}

.form__radio-group--tabs .form__radio-group-input + .form__radio-group-label {
  display: block;
  padding: 4px 10px 10px;
}

.form__radio-group--tabs .form__radio-group-input:checked + .form__radio-group-label {
  background: gu-colour(highlight-main);
}

.form__radio-group--pills .form__radio-group-list {
  display: flex;
}
/* ... */

